fix: fix font size on mobile

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -5,7 +5,7 @@
 
 body {
     font-family: "Space Mono", monospace;
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin: 0;
     padding: 0;
     background-color: var(--main-bg); /* Lighter body background */
@@ -15,6 +15,9 @@ body {
     height: 100vh;
     height: 100dvh;
     text-align: center;
+    @media(min-width: 600px) {
+        font-size: 1.2rem;
+    }
 }
 
 main {
